@@ -1,18 +1,21 @@
 package io.github.edsonzuchi.gfig.core.service.impl;
 
 import io.github.edsonzuchi.gfig.core.exception.WarehouseException;
-import io.github.edsonzuchi.gfig.core.model.dto.WarehouseDto;
+import io.github.edsonzuchi.gfig.core.model.dto.request.WarehouseRequest;
+import io.github.edsonzuchi.gfig.core.model.dto.response.WarehouseResponse;
 import io.github.edsonzuchi.gfig.core.model.entity.Warehouse;
+import io.github.edsonzuchi.gfig.core.model.enums.StatusCode;
 import io.github.edsonzuchi.gfig.core.service.UtilsService;
 import io.github.edsonzuchi.gfig.core.service.WarehouseService;
-import io.github.edsonzuchi.gfig.infra.repository.ProductRepository;
 import io.github.edsonzuchi.gfig.infra.repository.WarehouseRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,10 +23,9 @@ public class WarehouseServiceImpl implements WarehouseService {
 
     private final WarehouseRepository warehouseRepository;
     private final UtilsService utilsService;
-    private final ProductRepository productRepository;
 
     @Override
-    public Warehouse saveWarehouse(WarehouseDto dto) {
+    public Warehouse saveWarehouse(WarehouseRequest dto) {
         if (utilsService.isNullOrBlank(dto.name())) {
             throw WarehouseException.NAME_IS_BLANK;
         }
@@ -47,37 +49,67 @@ public class WarehouseServiceImpl implements WarehouseService {
         if (warehouse == null) {
             throw WarehouseException.WAREHOUSE_NOT_FOUND;
         }
-        final var list = productRepository.findAllByWarehouse_Id(id);
-        if (!list.isEmpty()) {
-            boolean isProduct = false;
-            for (var product : list) {
-                if (product.getQuantity() > 0) {
-                    isProduct = true;
-                }
-            }
-            if (isProduct) {
-                throw WarehouseException.PRODUCTS_IN_WAREHOUSE;
-            }
+
+        if (warehouse.getStatusCode() == StatusCode.ACTIVE) {
+            warehouse.setStatusCode(StatusCode.INACTIVE);
+        } else {
+            warehouse.setStatusCode(StatusCode.ACTIVE);
         }
 
-        warehouse.setDisabled(!warehouse.getDisabled());
         warehouseRepository.save(warehouse);
         return warehouse;
     }
 
     @Override
-    public List<Warehouse> getWarehouses() {
-        return warehouseRepository.findAll().stream()
-                .sorted(Comparator.comparing(Warehouse::getDisabled).thenComparing(Warehouse::getName))
-                .collect(Collectors.toList());
+    public List<WarehouseResponse> getWarehouses() {
+        List<WarehouseResponse> responses = new ArrayList<>();
+
+        var list = warehouseRepository
+                .findAll()
+                .stream()
+                .sorted(Comparator.comparing(Warehouse::getStatusCode)
+                        .thenComparing(Warehouse::getName))
+                .toList();
+
+        for (Warehouse warehouse : list) {
+            responses.add(new WarehouseResponse(
+                            warehouse.getId(),
+                            warehouse.getName(),
+                            (warehouse.getStatusCode() == StatusCode.INACTIVE),
+                            null)
+            );
+        }
+
+        return responses;
     }
 
     @Override
-    public Warehouse getWarehouse(Long id) {
+    public WarehouseResponse getWarehouse(Long id) {
         Warehouse warehouse = warehouseRepository.findById(id).orElse(null);
         if (warehouse == null) {
             throw WarehouseException.WAREHOUSE_NOT_FOUND;
         }
-        return warehouse;
+
+        return new WarehouseResponse(
+                warehouse.getId(),
+                warehouse.getName(),
+                (warehouse.getStatusCode() == StatusCode.INACTIVE),
+                warehouse.getMedia());
+    }
+
+    @Override
+    public void uploadWarehouse(Long warehouseId, MultipartFile file) throws WarehouseException {
+        var warehouse = warehouseRepository.findById(warehouseId).orElse(null);
+        if (warehouse == null) {
+            throw WarehouseException.WAREHOUSE_NOT_FOUND;
+        }
+
+        try {
+            warehouse.setMedia(file.getBytes());
+        } catch (IOException ioe) {
+            throw WarehouseException.WAREHOUSE_MEDIA_EXCEPTION;
+        }
+
+        warehouseRepository.save(warehouse);
     }
 }
